Fix T74322: Wrong object bundles with scaled camera

Camera scale was not handled correctly when drawing 3d bundles for
reconstructed objects (caused by normalization of the matrix).